--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,12 +45,34 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">PhotoApp</a>
+        <%= link_to "Photo App", root_path, class: "navbar-brand" %>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
             <li><%= link_to "Link1", "/path1"  %></li>
             <li><%= link_to "Link2", "/path2"  %></li>
             <li><%= link_to "Link3", "/path3"  %></li>
+          </ul>
+
+          <ul class="nav navbar-right col-md-4">
+            <% if current_user %>
+
+            <li class="col-md-8 user-name">
+              <%= link_to ('<i class="fa fa-user"></i> ' + truncate(current_user.email, length: 25)).html_safe,
+              edit_user_registration_path, title: 'Edit Profile' %>
+            </li>
+
+            <li class="col-md-4 logout">
+            <%= link_to('Logout', destroy_user_session_path,
+            class: 'btn btn-primary btn-danger', title: 'Logout', :method => :delete) %>
+            </li>
+
+            <% else %>
+
+            <li class="col-md-4 pull-right">
+            <%= link_to('Sign In', new_user_session_path, class: 'btn btn-primary', title: 'Sign In') %>
+            </li>
+
+            <% end %>
           </ul>
         </div>
       </div>
